RESOLVED FIXED281787
[macOS] Text selection incorrectly appears when clicking on playback controls on amazon.co.uk/gb/video
https://bugs.webkit.org/show_bug.cgi?id=281787
Summary [macOS] Text selection incorrectly appears when clicking on playback controls...
Wenson Hsieh
Reported 2024-10-18 15:34:29 PDT
Attachments
Wenson Hsieh
Comment 1 2024-10-18 15:41:26 PDT
EWS
Comment 2 2024-10-18 18:29:13 PDT
Committed 285449@main (952ca668cb88): <https://commits.webkit.org/285449@main> Reviewed commits have been landed. Closing PR #35463 and removing active labels.
EWS
Comment 3 2024-11-07 20:36:16 PST
Committed 283286.460@safari-7620-branch (cd6dbea7a64f): <https://commits.webkit.org/283286.460@safari-7620-branch> Reviewed commits have been landed. Closing PR #2257 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.