[macOS] Text selection incorrectly appears when clicking on playback controls on amazon.co.uk/gb/video https://bugs.webkit.org/show_bug.cgi?id=281787 rdar://138115410

Reviewed by Abrar Rahman Protyasha and Richard Robinson.

Generalize the quirk added in https://commits.webkit.org/285267@main, so that it applies to all
Amazon domains (not just amazon.com).

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsPrimeVideoUserSelectNoneQuirk const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/285449@main